tests/paczka1/small_fuzzy/35569439.err
Error in line 1: OWPmI A126 5,37
Error in line 3: rkpnJKET8N A126 292,61
Error in line 13: OWPmI A126 -2,7
